--- a/COVID-19/ML_DL_application_COVID_19.ipynb
+++ b/COVID-19/ML_DL_application_COVID_19.ipynb
@@ -1595,7 +1595,7 @@
         "    \n",
         "    for train_mol in train_smiles:\n",
         "        \n",
-        "        if similarity(row.smiles, train_mol) == 1:\n",
+        "        if similarity(row.smiles, train_mol) >= 0.98:\n",
         "          pred.at[row.Index,'in_trainset'] = True\n",
         "          \n",
         "    if row.in_trainset != True:\n",
